v0.2.0, 2014-11-xx	- Changed file upload format
						Multipart form data -> application/octet-stream
					- Changed Authentication config format (old format still supported)
						Service ID, Endpoint and redirect uri settings have been relocated to the "Authentication"
						section. A single configuration now reflects a single Batch Apps service.
					- Changed terminology regarding application -> jobtype
						Deprecated methods:
							- BatchAppsApi.app() -> BatchAppsApi.jobtype()
							- Configuration.set_default_application() -> Configuration.set_default_jobtype()
							- Configuration.application() -> Configuration.current_jobtype()
							- Configuration.applications() -> Configuration.list_jobtypes()
							- Configuration.add_application() -> Configuration.add_jobtype()
						Related changes:
							- Configuration.job_type -> Configuration.jobtype
							- Configuration object takes kwarg "jobtype" rather than "application"
							- Default job type now indicated by config setting "default_jobtype" rather than "default_app"
					- Changed terminology regarding service principal -> unattended account
						Deprecated methods:
							- AzureOAuth.get_principal_token() -> AzureOAuth.get_unattended_session()
						Related changes:
							- Configuration setting "service_principal" deprecated, replaced by "unattended_account"
							- Configuration setting "service_principal_key" deprecated, replaced by "unattended_key"
					- Added FileCollection.index() method
					- Added better handling for missing auth values in Configuration
					- Deprecated JobManager.create_file, replaced with JobManager.file_from_path()

v0.1.1, 2014-11-03	- Authentication bug fixes, changed config settings and url handling.
						- Changed Configuration setting "service_principal_key" to format "ClientID=abc;TenantID=xyz"
						- Enhanced _http() and _https() to remove existing prefix
						- Fixed incorrect auth resource

v0.1.0, 2014-10-28	- Beta Release.